--- a/Untitled (1).ipynb
+++ b/Untitled (1).ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "### Here is My Title"
+    "### Here is My Title I can now edit"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "id": "a7fa5420-6944-470e-b438-de4c5d16faff",
    "metadata": {},
    "source": [
-    "**Group 1:** *Name, Name, Name*"
+    "**Group 1:** *Name, Name, Name, New Name*"
    ]
   },
   {
